Extract javafx utils into libJfx, fix minor warnings